fixed labels on firefox won't show & add some browser-compability

--- a/sass/pcp.scss
+++ b/sass/pcp.scss
@@ -1,4 +1,5 @@
 @import "./pcp-variables";
+@import "./pcp-compability";
 
 @mixin slash($rotate-deg){
   position: absolute;
@@ -9,7 +10,7 @@
   margin: 0 auto;
   top: 50%;
   z-index: 0;
-  transform: translateY(-50%) rotate($rotate-deg);
+  @include transform(translateY(-50%) rotate($rotate-deg));
 }
 
 @mixin centering($position, $direction){
@@ -21,14 +22,14 @@
 	}
 	@else if $direction == ver { // align vertically
 		top: 50%;
-		transform: translateY(-50%);
+    @include transform(translateY(-50%));
 	}
 	@else if $direction == both{ // align in both directions
 		left: 0;
 		right: 0;
 		margin: auto;
 		top: 50%;
-		transform: translateY(-50%);
+    @include transform(translateY(-50%));
 	}
 }
 
